<resources>
	<string name="app_name">DOC IN</string>
	<string name="title_activity_main">MainActivity</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">DOC IN</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>

	<string name="menu_home">Home</string>
	<string name="menu_gallery">Gallery</string>
	<string name="menu_slideshow">Slideshow</string>
	<string name="menu_tools">Tools</string>
	<string name="menu_share">Share</string>
	<string name="menu_send">Send</string>

	<string name="title_activity_fullscreen">FullscreenActivity</string>
	<string name="dummy_button">Dummy Button</string>
	<string name="dummy_content">DUMMY\nCONTENT</string>
	<string name="menu_rencana">Rencana DOC In</string>
	<string name="menu_bap_doc">Entry BAP DOC</string>
	<string name="menu_bpb_voadip">Entry BPB VOADIP</string>
	<string name="menu_realisasi">Realisasi DOC In</string>
	<string name="log_out">Log Out</string>

	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="communicate">Communicate</string>
	<string name="contact_developer">Contact Developer</string>
	<string name="setting">Setting</string>
	<string name="sinkronisasi">Sinkronisasi</string>
	<string name="kemasan">Kemasan</string>
	<string name="jumlah">Jumlah</string>
</resources>
