<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:checkableBehavior="single">
		<item android:id="@+id/nav_home"
			android:icon="@drawable/ic_menu_home"
			android:title="@string/menu_home"/>
		<item android:id="@+id/nav_planning"
			android:icon="@drawable/ic_menu_assignment"
			android:title="@string/menu_rencana"/>
		<item android:id="@+id/nav_bap_doc"
			android:icon="@drawable/ic_menu_entry"
			android:title="@string/menu_bap_doc"/>
		<item android:id="@+id/nav_bpb_voadip"
			android:icon="@drawable/ic_menu_entry"
			android:title="@string/menu_bpb_voadip"/>
		<item android:id="@+id/nav_realisasi"
			android:icon="@drawable/ic_menu_assessment"
			android:title="@string/menu_realisasi"/>
	</group>

	<item android:title="@string/communicate">
		<menu>
			<item android:id="@+id/nav_contact"
				android:icon="@drawable/ic_menu_send"
				android:title="@string/contact_developer"/>
			<item android:id="@+id/nav_setting"
				android:icon="@drawable/ic_settings"
				android:title="@string/setting"/>
		</menu>
	</item>
</menu>